--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,10 @@ name = "pypi"
 [packages]
 django = "*"
 python-dateutil = "*"
+gunicorn = "*"
+django-on-heroku = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
